Add alert-aware time advance
